Adding the footer part of the page

--- a/index.html
+++ b/index.html
@@ -197,6 +197,72 @@
       </div>
     </main>
 
+    <footer>
+      <div class="container">
+        <div class="row footer-list-items">
+          <div class="col-6 px-4 col-md px-md-0 py-3">
+            <div>
+              <h5 class="mb-4">Platform</h5>
+              <ul class="list-unstyled text-small mt-3">
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Industrial 3D printer</a></li>
+              </ul>
+            </div>
+            <div>
+              <h5 class="mb-4">Materials</h5>
+              <ul class="list-unstyled text-small">
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">PEKK & Carnon-Fiber</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">PEKK</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">PEKK & Carnon-Fiber</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">PEKK</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">ULTEM™ 9085</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Polycarbonate</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Nylon (PA)</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-6 px-4 col-md px-md-0 py-3">
+            <div>
+              <h5 class="mb-4">Platform</h5>
+              <ul class="list-unstyled text-small">
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Event</a></li>
+              </ul>
+            </div>
+            <div>
+              <h5 class="mb-4">Company</h5>
+              <ul class="list-unstyled text-small">
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">About AON3D</a></li>
+                <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Careers</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-6 px-4 col-md px-md-0 py-3">
+            <ul class="list-unstyled text-small">
+              <li class="mb-4"><a class="link-secondary text-decoration-none" href="#">Advanced Additive Training</a></li>
+              <li class="mb-4"><a class="link-secondary text-decoration-none" href="#">Design for Additive Manufacturing</a></li>
+              <li class="mb-4"><a class="link-secondary text-decoration-none" href="#">Material Selection</a></li>
+              <li class="mb-4"><a class="link-secondary text-decoration-none" href="#">Process Parameter Development</a></li>
+              <li class="mb-4"><a class="link-secondary text-decoration-none" href="#">Company</a></li>
+              <li class="mb-4"><a class="link-secondary text-decoration-none" href="#">Feedback</a></li>
+            </ul>
+          </div>
+          <div class="col-6 px-4 col-md px-md-0 py-3">
+            <h5 class="mb-4">Subscripe</h5>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="container">
+        <div class="row justify-content-between">
+          <p class="col-12 px-4 pb-3 col-md-5 px-md-0 footer__copy-right">©AON3D Copyright 2021. All Rights Reserved by.</p>
+          <div class="col-12 px-4 pb-3 col-md-5 col-lg-4 col-xl-3 px-md-0 d-flex justify-content-between order-md-last order-first">
+            <a class="link-secondary text-decoration-none" href="#">Privacy</a>
+            <a class="link-secondary text-decoration-none" href="#">Terms of Use</a>
+            <a class="link-secondary text-decoration-none" href="#">Terms of Sale</a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
