Adding description text to make the code structure more clear

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </header>
 
     <main>
+      <!-- Begin of Slider -->
       <div id="carouselControl" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button
@@ -134,7 +135,8 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+      <!-- End of Slider -->
+      <!-- Begin of six sections -->
       <div class="body__cards">
         <div class="container">
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
@@ -195,6 +197,7 @@
           </div>
         </div>
       </div>
+      <!-- End of six Sections -->
     </main>
 
     <footer>
