--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="body__cards">
         <div class="container">
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
-            <div class="col px-3 ps-md-0 pb-5">
+            <div class="col px-3 pb-5">
               <div class="card h-100">
                 <h3 class="card-title mb-4">Doucumentation</h3>
                 <div class="h-100 d-flex flex-column justify-content-between">
@@ -158,7 +158,7 @@
                 </div>
               </div>
             </div>
-            <div class="col px-3 pe-md-0 pb-5">
+            <div class="col px-3 pb-5">
               <div class="card h-100">
                 <h3 class="card-title mb-4">Online Store</h3>
                 <div class="h-100 d-flex flex-column justify-content-between">
@@ -167,7 +167,7 @@
                 </div>
               </div>
             </div>
-            <div class="col px-3 ps-md-0 pb-5">
+            <div class="col px-3 pb-5">
               <div class="card h-100">
                 <h3 class="card-title mb-4">Vendors</h3>
                 <div class="h-100 d-flex flex-column justify-content-between">
@@ -185,7 +185,7 @@
                 </div>
               </div>
             </div>
-            <div class="col px-3 pe-md-0 pb-5">
+            <div class="col px-3 pb-5">
               <div class="card h-100">
                 <h3 class="card-title mb-4">Suppliers B</h3>
                 <div class="h-100 d-flex flex-column justify-content-between">
@@ -202,7 +202,7 @@
 
     <footer>
       <div class="container">
-        <div class="row footer-list-items">
+        <div class="row px-3 footer-list-items">
           <div class="col-6 px-4 col-md px-md-0 py-3">
             <div>
               <h5 class="mb-4">Platform</h5>
