--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <div class="container py-2">
           <div class="navbar-brand d-flex align-items-center">
             <img src="./images/logo.svg" alt="Logo" />
-            <a id="link-home" class="nav-link active" href="/index.html">Home</a>
-            <a id="link-gallery" class="nav-link" href="/gallery.html">Gallery</a>
+            <!-- If run this file locally, please change the href url to /index.html and /gallery.html -->
+            <a id="link-home" class="nav-link active" href="/aon3d-assessment/index.html">Home</a>
+            <a id="link-gallery" class="nav-link" href="/aon3d-assessment/gallery.html">Gallery</a>
           </div>
           <button class="navbar-toggler" id="headerNavbarToggler" type="button" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
