--- a/clientResetPassword.html
+++ b/clientResetPassword.html
@@ -10,5 +10,5 @@
         return decodeURIComponent(results[2].replace(/\+/g, " "));
     }
 
-    window.location.href = "hauslifeapp://ResetPassword?token=" + getParameterByName('token') + "#Intent;scheme=http;action=open_favs;end";
+    window.location.href = "hauslifeapp://ResetPassword?token=" + getParameterByName('token') + "#Intent;scheme=http;end";
 </script>
