--- a/clientShootingDetails.html
+++ b/clientShootingDetails.html
@@ -10,5 +10,5 @@
         return decodeURIComponent(results[2].replace(/\+/g, " "));
     }
 
-    window.location.href = "hauslifeapp://main/shootingTab/shootingDetails/" + getParameterByName('shootingId') + "#Intent;scheme=http;end";
+    window.location.href = "hausvaletapp://main/shootingTab/shootingDetails/" + getParameterByName('shootingId') + "#Intent;scheme=http;end";
 </script>
