add p tag to print out the url

--- a/clientGoogleSignIn.html
+++ b/clientGoogleSignIn.html
@@ -11,5 +11,12 @@
     }
 
     // window.location.href = "hausvaletapp://ResetPassword?token=" + getParameterByName('token') + "#Intent;scheme=http;end";
+    document.getElementById("url").innerHTML = window.location.href;
     console.log(window.location.href);
 </script>
+<body>
+    <p id='url'>
+        test
+    </p>
+
+</body>
