--- a/clientGoogleSignIn.html
+++ b/clientGoogleSignIn.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<script>
-     function getParameterByName(name) {
+<html>
+  <body>
+    <div id="container"></div>
+
+    <script>
+      function getParameterByName(name) {
         url = window.location.href;
         name = name.replace(/[\[\]]/g, "\\$&");
         var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-            results = regex.exec(url);
+          results = regex.exec(url);
         if (!results) return null;
-        if (!results[2]) return '';
+        if (!results[2]) return "";
         return decodeURIComponent(results[2].replace(/\+/g, " "));
-    }
+      }
 
-    // window.location.href = "hausvaletapp://ResetPassword?token=" + getParameterByName('token') + "#Intent;scheme=http;end";
-    document.getElementById("container").innerHTML = `<p>${window.location.href}</p>`;
-    console.log(window.location.href);
-</script>
-<body>
-    <div id="container"></div>
-</body>
+      // window.location.href = "hausvaletapp://ResetPassword?token=" + getParameterByName('token') + "#Intent;scheme=http;end";
+      document.getElementById("container").innerHTML = window.location.href;
+      console.log(window.location.href);
+    </script>
+  </body>
+</html>
