--- a/clientGoogleSignIn.html
+++ b/clientGoogleSignIn.html
@@ -14,9 +14,10 @@
         return decodeURIComponent(results[2].replace(/\+/g, " "));
       }
 
-      // window.location.href = "hausvaletapp://ResetPassword?token=" + getParameterByName('token') + "#Intent;scheme=http;end";
+      // window.location.href = "hausvaletapp://main/profileTab/notificationSetting/calendarSync" + getParameterByName('token') + "#Intent;scheme=http;end";
+
+      console.log(getParameterByName('code'));
       document.getElementById("container").innerHTML = window.location.href;
-      console.log(window.location.href);
     </script>
   </body>
 </html>
