--- a/clientGoogleSignIn.html
+++ b/clientGoogleSignIn.html
@@ -14,7 +14,9 @@
         return decodeURIComponent(results[2].replace(/\+/g, " "));
       }
 
-      window.location.href = "hausvaletapp://main/profileTab/notificationSetting/calendarSync/" + getParameterByName('code') + "#Intent;scheme=http;end";
+      window.location.href = "hausvaletapp://main/profileTab/" + getParameterByName('code') + "#Intent;scheme=http;end";
+      // window.location.href = "hausvaletapp://main/profileTab/notificationSetting/calendarSync/" + getParameterByName('code') + "#Intent;scheme=http;end";
+
     </script>
   </body>
 </html>
